--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <li><a href="README_NEW.md">وثائق الميزات</a></li>
         <li><a href="START_HERE_PUBLIC.md">كيفية المشاركة مع الآخرين</a></li>
     </ul>
+    <p>إذا كنت تريد أن يظهر الموقع نفسه على GitHub، لا يمكن ذلك لأنه تطبيق ديناميكي يتطلب خادم Flask؛ GitHub Pages يعرض فقط الملفات الثابتة. يمكنك استخدام أحد الحلول المذكورة في الوثائق للحفاظ على رابط عام.</p>
 </body>
 </html>
