--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </ol>
     <p>لزيارة الوثائق مباشرة:</p>
     <ul style="text-align:left;display:inline-block">
-        <li><a href="README_NEW.md">وثائق الميزات</a></li>
-        <li><a href="START_HERE_PUBLIC.md">كيفية المشاركة مع الآخرين</a></li>
+        <li><a href="readme_new.html">وثائق الميزات</a></li>
+        <li><a href="start_here_public.html">كيفية المشاركة مع الآخرين</a></li>
+        <li><a href="public_access.html">دليل الوصول العام</a></li>
+        <li><a href="deployment.html">دليل النشر</a></li>
     </ul>
     <p>إذا كنت تريد أن يظهر الموقع نفسه على GitHub، لا يمكن ذلك لأنه تطبيق ديناميكي يتطلب خادم Flask؛ GitHub Pages يعرض فقط الملفات الثابتة. يمكنك استخدام أحد الحلول المذكورة في الوثائق للحفاظ على رابط عام.</p>
 </body>
